Fix logo on tablet landscape

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -216,6 +216,11 @@
   .navbar__navlist {
     width: 65%;
   }
+  .navbar__logo {
+    margin: 0 0 0 10px;
+    height: 78px;
+    width: 135px;
+  }
 }
 
 @include for-desktop {
